# funql

./: .coveragerc  .env.example  .gitignore  NEXT.md  README.md  package.json  setup.cfg
fun/: models.py  urls.py  views.py
fun/migrations/: 0001_initial.py
fun/templates/account/: base.html
fun/templates/fun/: accounts_profile.html  base.html  start.html
funql/: apps.py
mysite/: settings.py  urls.py
