[metadata]
name = funql
version = 2021.12.1
description = FunQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/funql
author = Thomas Guettler
author_email = guettliml.funql@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
include_package_data = true
packages = fun
install_requires = \
    pytest-django
    pytest-mock
    Django
    python-dotenv
    psycopg2-binary
    whitenoise
    gunicorn
    html_form_to_dict
    pre-commit
    django-check-html-middleware
    django-middleware-global-request
    django-allauth

scripts = manage.py
